Json Package changes

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ilanyagutilov3000.github.io/qrcodereader",
   "name": "qrcodereader",
   "version": "0.1.0",
   "private": true,
